[gd_scene load_steps=6 format=3 uid="uid://bkw8emshuthmu"]

[ext_resource type="Script" uid="uid://dl02fn5p81555" path="res://scripts/shop.gd" id="1_032fp"]
[ext_resource type="Texture2D" uid="uid://crb5jbv3lraw8" path="res://art/bad_placeholder_art/Placeholder_Shop_Screen.png" id="1_lx5au"]
[ext_resource type="Texture2D" uid="uid://dfjcqnlmbkv48" path="res://art/bad_placeholder_art/Upgrade_Button_Placeholder.png" id="2_1l46r"]
[ext_resource type="Texture2D" uid="uid://cbv2bldg6pmrm" path="res://art/bad_placeholder_art/Upgrade_Button_Pressed_Placeholder.png" id="3_032fp"]
[ext_resource type="Texture2D" uid="uid://bmpftc3h00xdd" path="res://art/bad_placeholder_art/Upgrade_Button_Hover_Placeholder.png" id="5_2fc2m"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -992.0
offset_bottom = -520.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_032fp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlaceholderShopScreen" type="TextureRect" parent="CanvasLayer"]
offset_left = 112.0
offset_top = 16.0
offset_right = 272.0
offset_bottom = 144.0
texture = ExtResource("1_lx5au")

[node name="FuelUpgrade" type="TextureButton" parent="CanvasLayer"]
offset_left = 133.0
offset_top = 59.0
offset_right = 181.0
offset_bottom = 83.0
texture_normal = ExtResource("2_1l46r")
texture_pressed = ExtResource("3_032fp")
texture_hover = ExtResource("5_2fc2m")
stretch_mode = 3

[node name="WeaponUpgrade" type="Button" parent="CanvasLayer"]
offset_left = 135.0
offset_top = 88.0
offset_right = 325.0
offset_bottom = 119.0
scale = Vector2(0.5, 0.5)
text = "Weapon (5/10/15 gems)"

[node name="RadarUpgrade" type="Button" parent="CanvasLayer"]
offset_left = 136.0
offset_top = 106.0
offset_right = 326.0
offset_bottom = 137.0
scale = Vector2(0.5, 0.5)
text = "Radar (3/7/12/18 gems)"

[connection signal="pressed" from="CanvasLayer/FuelUpgrade" to="." method="_on_fuel_upgrade_pressed"]
[connection signal="pressed" from="CanvasLayer/WeaponUpgrade" to="." method="_on_weapon_upgrade_pressed"]
[connection signal="pressed" from="CanvasLayer/RadarUpgrade" to="." method="_on_radar_upgrade_pressed"]
